# crop-mask

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md
Scripts/: .deafrica_ml_prediction_simple_runner.py.swp  deafrica_classificationtools.py  deafrica_ml_prediction_simple_runner.py  feature_layer_functions.py  pyproject.toml  simple_runner.py
crop_mask/: testing.ipynb  (+5 more)
production/dea_ml/: docker-compose.yml  gm_s2_semiannual.odc-product.yaml  pyproject.toml  setup.py
production/dea_ml/dea_ml/config/: config_northern_notebook.yaml  config_parser.py  ml_config.yaml  ml_config_northern.yaml  ml_config_notebook.yaml  ml_config_western.yaml  plugin_product.yaml  plugin_product_eastern.yaml  plugin_product_northern.yaml  plugin_product_western.yaml  product_feature_config.py  product_feature_paths.config
production/dea_ml/dea_ml/core/: africa_geobox.py  feature_layer.py  feature_layer_default.py  feature_layer_functions.py  post_processing.py  predict_from_feature.py  stac_to_dc.py
production/dea_ml/dea_ml/helpers/: geojson_defined_tasks.py  io.py  json_to_taskstr.py  local_files_into_dc.py  validate_cloud_optimized_geotiff.py
production/dea_ml/dea_ml/pipeline/: pred_run.py  prediction.py  proc.py  train_feature.py
production/dea_ml/dea_ml/plugins/: gm_ml_pred.py
production/dea_ml/dea_ml/samples/: s2_tiles_eastern_aez_tasks_s2.json  (+1 more)
production/dea_ml/docker/: Dockerfile  dea-tools-ml.txt  requirements-odc-static.txt  requirements.txt
production/dea_ml/docs/: Step-3-AWS-S3-data-sync-from-Sandbox-or-devbox-onto-S3--buckets.md
(+1102 files in other folders)
