[tool.poetry]
name = "cm-script"
version = "0.1.0"
description = ""
authors = ["jinjun sun <jijun.sun@ga.gov.au>"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
