[tool.poetry]
name = "dea-ml"
version = "v0.1.8"
description = ""
authors = ["Chad Burton <Chad.Burton@ga.gov.au>, jinjun sun <jijun.sun@ga.gov.au>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"